# Vulkaner

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini
assets/: Opt_Untitled.glb  Untitled.glb  monke.glb  scene.json
assets/scene/: scene.json
assets/scene/images/: 0.json  2c26bab8-3497-490c-aa59-4d586af9e61a.img.json
assets/scene/materials/: materials.json
assets/scene/meshes/: 0.json  1.json  2b3403e8-f4c5-4a6a-a227-5d323baba821.mesh.json  fedd83ef-6d52-4d83-a32e-73957e500a21.mesh.json
glb_converter/: Cargo.toml  Untitled.glb
glb_converter/entities/: entities.json
glb_converter/images/: 2a235546-cd2b-4a78-88c1-42884944f0b3.img.json
glb_converter/materials/: materials.json
glb_converter/meshes/: cbb32381-4d49-4f89-8228-b67311b00700.mesh.json
glb_converter/scene/: scene.json
glb_converter/scene/entities/: entities.json
glb_converter/scene/materials/: 0.json  1.json
glb_converter/scene/meshes/: 0.json  1.json  dd0b5c09-3333-4780-9f0b-3f0b0b7d4695.mesh.json
glb_converter/src/: main.rs
shaders/: compute.hlsl  compute.slang  gbuffer.slang  lighting_pass.slang  sh.frag  sh.vert  triangle.slang  vertex.spv
src/: main.cpp
src/game/: game.cpp  game.h  plugin.h
src/game/ecs/: dynamic_bitset.h  thread_pool.h  vox_ecs.h
src/game/plugins/: asset_plugin.cpp  asset_plugin.h  camera_plugin.cpp  camera_plugin.h  default_components_plugin.cpp  default_components_plugin.h  registry_plugin.cpp  registry_plugin.h  render_plugin.cpp  render_plugin.h  scene_plugin.cpp  scene_plugin.h
src/game/required_components/: assets.h  loader.cpp  loader.h  materials.h  name.h  standard_material.h  transform.h
src/platform/importer/tinygltf/: tiny_gltf.cpp
src/platform/loader/: scene_loader.h
src/platform/loader/tinygltf/: tiny_gltf.cpp
src/platform/math/: math.h
src/platform/render/: deletion_queue.h  pipeline.cpp  pipeline.h  render_object.h  renderer.cpp  renderer.h  resources.cpp  resources.h  vertex.h  vk_utils.cpp  vk_utils.h  vulkan_macros.h
src/platform/render/allocator/: vk_mem_alloc.cpp
src/platform/renderer/: gpu_structs.h  material.h  mesh.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  resource_handler.cpp  resource_handler.h  vertex.h  vulkan_macros.h
